Fixed extra space in about section

--- a/src/styles/about.module.css
+++ b/src/styles/about.module.css
@@ -128,8 +128,7 @@
 }
 
 @media screen and (min-width: 940px) {
-  .hide,
-  .hideSocials {
+  .hide, .hideSocials {
     display: block;
   }
 
